# aru-raharja-backend

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
cargo/: config.toml
migrations/2025-09-27-071319-0000_create_roles/: up.sql
migrations/2025-09-27-071319-0001_create_users/: up.sql
migrations/2025-09-27-071319-0002_create_category/: down.sql  up.sql
migrations/2025-09-27-071319-0003_create_news/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: mod.rs
src/db/: mod.rs
src/models/: category.rs  mod.rs  news.rs  role.rs  user.rs
src/routes/: mod.rs
