[package]
name = "aru-raharja-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
actix-web = "4"
actix-cors = "0.7"

# Env & logging
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Diesel + Postgres + pool + time/uuid
diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.3"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
